k02_advanced_kubernetes/M04/4.2/frontend-service-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: webapp
    role: frontend
  type: NodePort
---
apiVersion: v1
kind: Pod
metadata:
  name: example-go
  labels:
    app: webapp
    role: frontend
spec:
  containers:
    - name: example-go
      image: deis/example-go
      ports:
        - containerPort: 8080
